计量计费首次提交

--- a/doom.config.yml
+++ b/doom.config.yml
@@ -6,3 +6,9 @@ api:
     - docs/shared/crds/*.yaml
   openapis:
     - docs/shared/openapis/*.json
+# 以下资源文件路径，相对于 doom.config.yaml 所在目录，支持 glob 匹配，json/yaml 文件
+permission:
+  functionresources:
+    - docs/shared/functionresources/*.yaml
+  roletemplates:
+    - docs/shared/roletemplates/*.yaml
